# exlibris-py

./: README.md  exlibris.py  exlibrys.py  index.html  pyproject.toml
tests/: test_exlibrys.py
