[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "exlibrys"
version = "0.1.0"
description = "Reimplementation of the Exl_win.exe (\"Ex Libris\" / \"Екслібрис\") checksum algorithm, reverse-engineered from the original binary."
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[project.scripts]
exlibrys = "exlibrys:main"

[tool.hatch.build.targets.wheel]
include = ["exlibrys.py"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "numpy",  # only needed by tests/test_exlibrys.py to regenerate the
              # large-file fixtures deterministically; not a runtime
              # dependency of exlibrys itself.
]

[tool.pytest.ini_options]
testpaths = ["tests"]
